Implemented a default workflow for versions.  Updated the UI to support tasks.
