# workflows/app/src/main/java/io/apicurio/lifecycle/workflows/rest/v0/TasksResourceImpl.java
@@ -1,0 +1,77 @@
+/*
+ * Copyright 2023 Red Hat Inc
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package io.apicurio.lifecycle.workflows.rest.v0;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.activiti.engine.ProcessEngine;
+import org.activiti.engine.TaskService;
+
+import io.apicurio.lifecycle.workflows.rest.v0.beans.CompleteTask;
+import io.apicurio.lifecycle.workflows.rest.v0.beans.Task;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
+import jakarta.validation.constraints.NotNull;
+
+@ApplicationScoped
+public class TasksResourceImpl implements TasksResource {
+    
+    @Inject
+    ProcessEngine engine;
+
+    /**
+     * @see io.apicurio.lifecycle.workflows.rest.v0.TasksResource#getTasks()
+     */
+    @Override
+    public List<Task> getTasks() {
+        TaskService taskService = engine.getTaskService();
+        return taskService.createTaskQuery().list().stream().map(task -> {
+            return Task.builder()
+                    .assignee(task.getAssignee())
+                    .description(task.getDescription())
+                    .id(task.getId())
+                    .name(task.getName())
+                    .build();
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * @see io.apicurio.lifecycle.workflows.rest.v0.TasksResource#getTask(java.lang.String)
+     */
+    @Override
+    public Task getTask(String taskId) {
+        TaskService taskService = engine.getTaskService();
+        org.activiti.engine.task.Task task = taskService.createTaskQuery().taskId(taskId).singleResult();
+        return Task.builder()
+                .assignee(task.getAssignee())
+                .description(task.getDescription())
+                .id(task.getId())
+                .name(task.getName())
+                .build();
+    }
+
+    /**
+     * @see io.apicurio.lifecycle.workflows.rest.v0.TasksResource#completeTask(java.lang.String, io.apicurio.lifecycle.workflows.rest.v0.beans.CompleteTask)
+     */
+    @Override
+    public void completeTask(String taskId, @NotNull CompleteTask data) {
+        TaskService taskService = engine.getTaskService();
+        taskService.complete(taskId, data.getAdditionalProperties());
+    }
+
+}
